# premier-league-prediction-2019-2020

./: .gitignore  README.md  REFACTORING_SUMMARY.md  architecture.md  gradio_app.py  gradio_v2_app.py  pyproject.toml
data/: carabao.csv  champion_league.csv  europa_league.csv  fa_cup.csv  fixture_2019-2020.csv  league_position_after20.csv  model_comparison_results.csv  players_1920_fin.csv  premier_league.csv
data/additional_data/: additional_premier_league.csv  carabao.csv  champion_league.csv  europa_league.csv  fa_cup.csv  premier_league.csv
data/scripts/: cleaning_script.py  generate_additional_premier_league_data.py  generate_script.py
data/unclean_data/: epl2020.csv  fixture_2019-2020.csv
docs/: architecture.md  current_state_040426.md  current_state_060426.md  eda_current_state_060426.md  modeling.md
model/: random_forest.py
notebooks/: eda.ipynb  eda2.ipynb  gradio_app.py  main.ipynb  model_comparison.ipynb  modeling.ipynb  v1.ipynb  v2.ipynb
src/: __init__.py  training_common.py
src/config/: config.py
src/features/: __init__.py  advanced.py  basic.py  style_analysis.py  style_calculations.py
src/models/: decision_tree.py  linear_regression.py  random_forest.py
src/pipeline/: __init__.py  model.py  splitting.py
src/utils/: __init__.py  helpers.py  io.py
